# eco-agent

./: .gitignore  Dockerfile  Makefile  README.md  config.yml  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: build-and-publish.yml
deploy/: main.yml
src/: application.py  discord.py  main.py  model.py  telemetry.py
