[project]
name = "eco-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Kai Siren",email = "coilysiren@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "sentry-sdk",
    "uvicorn (>=0.34.2,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
