[project]
name = "eco-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Kai Siren",email = "coilysiren@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "sentry-sdk[fastapi] (>=2.27.0,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "boto3 (>=1.38.2,<2.0.0)",
    "structlog (>=25.2.0,<26.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "opentelemetry-instrumentation (>=0.53b1,<0.54)",
    "opentelemetry-distro (>=0.53b1,<0.54)",
    "opentelemetry-exporter-otlp (>=1.32.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
